feat: revise fleet plans conversationally
